# CrewAI_DummyProjects

./: .gitignore  README.md
dummy_proj/: README.md  pyproject.toml  report.md
dummy_proj/src/dummy_proj/: crew.py  main.py
dummy_proj/src/dummy_proj/config/: agents.yaml  tasks.yaml
meeting_minutes/: README.md  pyproject.toml
meeting_minutes/src/meeting_minutes/: main.py
myproj/: README.md  pyproject.toml
myproj/src/myproj/: crew.py  main.py
myproj/src/myproj/config/: agents.yaml
new_flow/: README.md  poem.txt  pyproject.toml
new_flow/src/new_flow/: main.py
new_flow/src/new_flow/crews/poem_crew/: poem_crew.py
pdf_rag/: pyproject.toml
pdf_rag/db/: chroma.sqlite3
pdf_rag/src/pdf_rag/: crew.py  main.py
pdf_rag/src/pdf_rag/config/: agents.yaml  tasks.yaml
