[project]
name = "dummy_proj"
version = "0.1.0"
description = "dummy_proj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
dummy_proj = "dummy_proj.main:run"
run_crew = "dummy_proj.main:run"
train = "dummy_proj.main:train"
replay = "dummy_proj.main:replay"
test = "dummy_proj.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
