[project]
name = "myproj"
version = "0.1.0"
description = "myproj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
myproj = "myproj.main:run"
run_crew = "myproj.main:run"
train = "myproj.main:train"
replay = "myproj.main:replay"
test = "myproj.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
